add modal toggle

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="modal-wrapper">
         <form class="modal column">
             <h1 class="dialog-title">Add new book</h1>
-            <input type="text" placeholder="Title" class="title-input">
-            <input type="text" placeholder="Author" class="author-input">
-            <input type="text" placeholder="Pages" class="pages-input">
+            <input type="text" placeholder="Title" class="title-input" required>
+            <input type="text" placeholder="Author" class="author-input" required>
+            <input type="text" placeholder="Pages" class="pages-input" required>
             <div class="read-wrapper">
                 <label for="is-read">Have you read it?</label>
                 <input id="is-read" type="checkbox">
             </div>
-            <button type="button" class="submit">Submit</button>
+            <button type="submit" class="submit">Submit</button>
         </form>
     </div>
     <div class="container">
