--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <main class="main">
             <div class="content column">
-                <button type="button" class="add-button">+ Add book</button>
+                <button type="button" class="add-button">+</button>
                 <div class="books-wrapper">
                 </div>
             </div>
