--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
     <div class="modal-wrapper">
         <form class="modal column">
             <h1 class="dialog-title">Add new book</h1>
-            <input type="text" placeholder="Title" class="title-input" name="title" required>
-            <input type="text" placeholder="Author" class="author-input" name="author" required>
-            <input type="number" placeholder="Pages" class="pages-input" name="pages" required>
+            <input type="text" placeholder="Title" class="title-input" name="title" maxlength="30" required>
+            <input type="text" placeholder="Author" class="author-input" name="author" maxlength="30" required>
+            <input type="number" placeholder="Pages" class="pages-input" name="pages" min="1" max="10000" required>
             <div class="read-wrapper">
                 <label for="is-read">Have you read it?</label>
-                <input id="is-read" name="isRead" type="checkbox">
+                <input id="is-read"
+                class="is-read" name="isRead" type="checkbox">
             </div>
-            <button type="submit" class="submit">Submit</button>
+            <div class="buttons-wrapper">
+                <button type="reset" class="reset">Reset</button>
+                <button type="submit" class="submit">Submit</button>
+            </div>
+            
         </form>
     </div>
     <div class="container">
